# KG-Retailbot

./: README.md
CORA/: cora.ttl  cora.turtle
Chatbot/: Postman_json.py  Rasa_Postman.json  config.yml  domain.yml  events.db  graph.html  neo4j_knowledge_base.py  neo4j_test.py
Chatbot/KG/: KG schema.py  allschema.json  data.json  first.json  kgdata_Scenario1.py  knowledge_base.yaml  second.json  third.json
Chatbot/actions/: action_test.py  actions.py  current_action.py  current_task.py  previous_task.py  response_furniture.py  response_product_location.py  response_product_property.py  response_specific_product.py  response_specific_task.py
Chatbot/data/: nlu.yml  rules.yml  stories.yml
Evaluation/: Scenario1_Chatbot_Quantitative.xlsx  Scenario2_Chatbot_Quantitative.xlsx
KG/: CORA_LPG.json  CORA_LPG_filter.json  CORA_OWL.json  IORA_LPG.json  KG-Retailbot-dbms.dump  Product.json  Reserved_subPropertyOf.json
catkin_ws/devel/: .catkin  local_setup.sh
catkin_ws/devel/include/albert_decision_making/: ActiveInferenceAction.h  ActiveInferenceActionFeedback.h  ActiveInferenceActionGoal.h  ActiveInferenceActionResult.h  ActiveInferenceFeedback.h  ActiveInferenceGoal.h  ActiveInferenceResult.h  SymbolicPerception.h  (+2 more)
catkin_ws/src/: task_simple_illustration.py
catkin_ws/src/albert_skills/: CMakeLists.txt  package.xml
catkin_ws/src/albert_skills/launch/: load_skills.launch
catkin_ws/src/albert_skills/scripts/: look_for_item_server_fabrics.py  move_base_sever.py  pick_server_fabrics.py  place_server_fabrics.py
catkin_ws/src/decision makeing/: ai_agent.py
(+223 files in other folders)
